cmake_minimum_required(VERSION 2.8)
link_directories(${CMAKE_SOURCE_DIR}/mkldnn/lib/)
include_directories(${CMAKE_SOURCE_DIR}/mkldnn/include/)
if (APPLE)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -march=native -Wall")
    set(EXTRA_LIBS iomp5 mklml)
endif()

if(UNIX AND NOT APPLE)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3 -march=native -Wall")
    set(EXTRA_LIBS iomp5 mklml_gnu)
endif()

add_executable(mypdist pdist.c utils.c test.c)
target_link_libraries(mypdist ${EXTRA_LIBS})
